# rice-qrspi

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.claude/skills/qrspi/: QUICKREF.md  README.md  SKILL.md  WALKTHROUGH.md  sync-commands.sh
.claude/skills/qrspi/commands/: 0_go.md  1_ticket.md  2_research.md  3_design.md  4_structure.md  5_plan.md  6_implement.md  7_validate.md
.claude/skills/qrspi/findings/: README.md  TEMPLATE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_profile.md
.github/workflows/: ci.yml  close-external-prs.yml
demo/: README.md  demo.tape  qrspi-demo.sh
examples/fastapi-todo/: .gitignore  README.md  pyproject.toml  setup.sh
examples/fastapi-todo/app/: main.py  schemas.py  store.py
examples/fastapi-todo/app/routers/: todos.py
examples/fastapi-todo/tests/: test_todos.py
examples/fastapi-todo/tickets/active/: TODO-1-mark-todo-complete.md
examples/fastapi-todo/working-docs/: config.json
examples/react-todo/: .gitignore  README.md  index.html  package-lock.json  package.json  setup.sh
examples/react-todo/src/: App.css  App.tsx  index.css
examples/react-todo/src/components/: TodoForm.tsx  TodoList.tsx
examples/react-todo/src/hooks/: useTodos.ts
examples/react-todo/src/services/: api.ts
examples/react-todo/tickets/active/: TODO-1-mark-todo-complete.md
examples/react-todo/working-docs/: config.json
tickets/: README.md
working-docs/: config.json
working-docs/profiles/: fastapi.json  springboot.json  storefront.json
