[project]
name = "fastapi-todo"
version = "0.1.0"
description = "A trivial FastAPI app used to demonstrate the QRSPI workflow end to end."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

# This is an application, not a library — uv manages the venv + deps but does
# not try to build/install the project itself.
[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["integration: slower end-to-end tests (run separately from unit tests)"]

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
